force-app/main/default/objects/BMCServiceDesk__User_Account_Link__c/BMCServiceDesk__User_Account_Link__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data linking between users and accounts.This is a singleton relation i.e.between a user and account only one relation can exist in this junction object.</description>
    <label>User Account Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Account Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>