force-app/main/default/objects/BMCServiceDesk__User_Account_Link__c/fields/BMCServiceDesk__FKAccount__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>User Account Links</relationshipLabel>
    <relationshipName>User_Account_Links</relationshipName>
    <type>Lookup</type>
</CustomField>