force-app/main/default/objects/BMCServiceDesk__User_Account_Link__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Account_Links</relationshipName>
    <type>Lookup</type>
</CustomField>