force-app/main/default/objects/BMCServiceDesk__User_Account_Link__c/fields/BMCServiceDesk__ToDelete__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToDelete</label>
    <type>Checkbox</type>
</CustomField>